# narraka

./: .gitignore  README.md  app_delegate.py  chat.py  main.py  main.spec  pyproject.toml  shell.py
ghosts/c-chat/: ghost.py  ghost_info.yaml  prompt_template.txt
ghosts/selvi/: ghost.py  ghost_info.yaml  prompt_template.txt
ghosts_ext/sample/: ghost.yaml  prompt_template.txt
ghosts_ext_models/: default.py
innertiktoken/: core.py  encoding_constructors.py  registry.py
